--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -64,6 +64,10 @@
             = yield :sidebar
           .clear
           #footer
+            %h2.creer Creer para Crear
+            %p Patatoon es el ganador del 5to concurso Creer para Crear
+            %h2.probide Probide
+            .clear
       .bg-footer
       /[if IE] 
         :erb
