Added new banner code

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -88,7 +88,13 @@
     .next.arrow
     .banner
       %ul
-        %li
-          .banner-1
-            %img{:src => "/images/banners/banner-1.png"}/
-            %h3 Expr&eacute;sate, crea tu avatar, y s&eacute; un hincha más
+        %li.html
+          .facebook
+            %h3 Expresate, crea tu avatar, y se un hincha más
+            %h4 Participa con tus amigos, haz pronósticos y comparte opiniones sobre lo que te apasiona
+            %p Acumula puntos, y gana increibles premios, junta a tus amigos y diviertete con Patatoon
+            = link_to "Crea tu cuenta fanitoon", new_registration_path("account"), {:id=>"register_new_user", :class=>"button"}
+            = link_to "o entra con <span>Facebook</span>", fb_connect_path, {:id=>"register_facebook", :class=>"fb-btn"}
+        %li.img
+          %a{:href => "#"}
+            %img{:height => "271", :src => "images/banners/banner-2.jpg", :width => "815"}/
