--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -30,8 +30,10 @@
                   %td.first goles
                   %td{:class=>("win" if match.local_winner?)}= match.first_team_goals
                   %td{:class=>("win" if match.visitor_winner?)}= match.second_team_goals
-            - if account_signed_in?
-              = link_to "deja tu pronóstico", match_prediction_path(match), :class=>"predict button iframe"
+                - if account_signed_in?
+                  %tr{:colspan => 3}
+                    %td{:colspan => 3}
+                      = link_to "deja tu pronóstico", match_prediction_path(match), :class=>"predict button iframe"
             
                   
 - content_for :sidebar do
