--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -122,8 +122,7 @@
 
 .banner .html .facebook p {
 	font-family:Arial;
-	margin-top:6px;
-	padding-left:7px;
+	font-size: 16px !important;
 	line-height:20px;
 	height:40px;
 	margin-bottom:12px;
