Changed minimal texts

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -93,7 +93,7 @@
             %h3 Expresate, crea tu avatar, y se un hincha más
             %h4 Participa con tus amigos, haz pronósticos y comparte opiniones sobre lo que te apasiona
             %p Acumula puntos, y gana increibles premios, junta a tus amigos y diviertete con Patatoon
-            = link_to "Crea tu cuenta fanitoon", new_registration_path("account"), {:id=>"register_new_user", :class=>"button"}
+            = link_to "Crea tu cuenta patatoon", new_registration_path("account"), {:id=>"register_new_user", :class=>"button"}
             = link_to "o entra con <span>Facebook</span>", fb_connect_path, {:id=>"register_facebook", :class=>"fb-btn button"}
         %li.img
           %a{:href => "#"}
