Enableing predictions home

--- a/app/views/predictions/_most_commented.html.haml
+++ b/app/views/predictions/_most_commented.html.haml
@@ -1,7 +1,7 @@
 #most-predicted
-  %h3 los más pronosticados
+  %h3 los más comentados
   .container
-    %ul= render :partial => "home/most_predicted", :collection => @popular_predictions
+    %ul= render :partial => "home/most_comments", :collection => @most_commented
 
     .clear
   .nav
