Fixed CSS design

--- a/app/views/predictions/index.html.haml
+++ b/app/views/predictions/index.html.haml
@@ -17,7 +17,7 @@
 
   .clear
 
-#next-games
+#nexts-games
   %h3 Los partidos por venir
   %ul
     = render :partial => "home/next_match", :collection => @matches
