--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -11,6 +11,14 @@
 	font-style: normal;
 }
 
+.predictions.home #most-predicted div.container ul li {
+	margin-bottom: 10px !important;
+}
+
+.predictions.home #nexts-games h3 {
+	margin-bottom: 20px;
+}
+
 
 h2,h3,h4,h5,h6 {
 	font-family: 'HelveticaRounded', Arial;
