--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -77,7 +77,7 @@
         %p 1 puntos
         %p.title novato
   #facebook_likebox
-    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340&amp;show-faces=true", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
 
   
   
