--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     /[if IE] 
       = stylesheet_link_tag "ie"
     = yield :include 
+    = yield :head
     %body{:class=>"#{controller.controller_name} #{@body_class}"}
       /[if IE]
         :erb
