--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -19,6 +19,11 @@
 	margin-bottom: 20px;
 }
 
+body.avatar {
+  
+  margin: 0px;
+  
+}
 
 h2,h3,h4,h5,h6 {
 	font-family: 'HelveticaRounded', Arial;
