Added automatic transition on header

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -98,7 +98,8 @@
         %li.html
           .facebook
             %h3 ¡Viaja a Argentina con Patatoon!
-            %h4 Acierta en los pronósticos y gana puntos. Los que más tenga, participan en el concurso 
+            %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
+            %p ¿Qué esperas? ¡Únete a Patatoon!
         / %li.img
         /   %a{:href => "#"}
         /     %img{:height => "271", :src => "images/banners/banner-2.jpg", :width => "815"}/
