Enabled individual predictions interface, linked from home and other predictions

--- a/app/views/home/_last_prediction.html.haml
+++ b/app/views/home/_last_prediction.html.haml
@@ -17,3 +17,7 @@
         - visitor_goals = last_prediction.second_team_result || "--"
         %td{:class=>("win" if last_prediction.local_winner?)}= local_goals
         %td{:class=>("win" if last_prediction.visitor_winner?)}= visitor_goals
+      %tr
+        %td{:colspan=>3}
+          = link_to "ver pronóstico", prediction_path(last_prediction.id)
+        
