--- a/app/views/home/_most_predicted.html.haml
+++ b/app/views/home/_most_predicted.html.haml
@@ -4,4 +4,5 @@
   %a{:href => match_path(most_predicted)}
     .flag.small{:class=>most_predicted.local.flag_name, :title=>most_predicted.local.name}= most_predicted.local.short_name
     .flag.small{:class=>most_predicted.visitor.flag_name, :title=>most_predicted.visitor.name}= most_predicted.visitor.short_name
-    %p= "#{most_predicted.predictions_count} pronósticos"
+    %p
+      = "#{most_predicted.predictions_count} pronósticos"
