--- a/app/views/comments/_comments_list.html.haml
+++ b/app/views/comments/_comments_list.html.haml
@@ -23,7 +23,7 @@
       - else
         = f.input :email
         = f.input :website, :label => "Sitio web", :required => false
-      = f.input :content, :label => "Contenido"      
+      = f.input :content, :label => "¡Comenta!"      
       = hidden_field_tag "comment[commentable_id]", commentable.id
       = hidden_field_tag "comment[commentable_type]", commentable.class
     - f.buttons do
