--- a/app/views/home/_next_games.html.haml
+++ b/app/views/home/_next_games.html.haml
@@ -6,19 +6,20 @@
         .one.flag.medium{:title=>@last_match.local.name, :class=>@last_match.local.flag_name}= @last_match.try(:local).try(:short_name)
         vs
         .two.flag.medium{:title=>@last_match.visitor.name, :class=>@last_match.visitor.flag_name}= @last_match.try(:visitor).try(:short_name)
-    .counter
-      .day
-        %span -
-        días
-      .hour
-        %span -
-        horas
-      .minute
-        %span -
-        minutos
-      .second
-        %span -
-        segundos
+    .counter{:rel=>@last_match.played_at }
+    
+      / .day
+      /   %span -
+      /   días
+      / .hour
+      /   %span -
+      /   horas
+      / .minute
+      /   %span -
+      /   minutos
+      / .second
+      /   %span -
+      /   segundos
   %ul
     = render :partial => "home/next_match", :collection => @matches
   .clear
