--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -97,9 +97,9 @@
             = link_to "o entra con <span>Facebook</span>", fb_connect_path, {:id=>"register_facebook", :class=>"fb-btn button"}
         %li.html
           .facebook
-            %h3 ¡Viaja a Argentina con Patatoon!
+            %h3 ¡Viaja al final de la copa Libertadores!
             %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
-            %p ¿Qué esperas? ¡Únete a Patatoon!
+            %p ¿Qué esperas? ¡Únete a Patatoon y viaja con todo pagado!
         / %li.img
         /   %a{:href => "#"}
         /     %img{:height => "271", :src => "images/banners/banner-2.jpg", :width => "815"}/
