--- a/app/views/layouts/predictions.html.haml
+++ b/app/views/layouts/predictions.html.haml
@@ -6,4 +6,4 @@
   %body
     = yield :include
     #main= yield
-    = javascript_include_tag'jquery','jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','jcarousellite_1.0.1.min','application'
+    = javascript_include_tag'jquery','jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','countdown/jquery.countdown.min','date','jcarousellite_1.0.1.min','application'
