--- a/app/views/admin/badges/_form.html.haml
+++ b/app/views/admin/badges/_form.html.haml
@@ -2,7 +2,7 @@
   - form.inputs do
     = form.input :name, :label => "Nombre"
     = form.input :description, :label=>"Descripción", :input_html => {:class => "tinymce"}
-    = form.input :type, Label => "Tipo"
+    = form.input :type, :label => "Tipo"
     
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
