Static user badges now are updated

--- a/app/views/accounts/edit.haml
+++ b/app/views/accounts/edit.haml
@@ -50,12 +50,4 @@
 
 
 - content_for :sidebar do
-
-  #ranking.block
-    %h2 Los que siempre aciertan
-
-    %h2 Los más rankeados
-
-  #featured_posts.block
-    %h2 Destacadas
-    .content_box Destacada
+  = render :partial => "home/sidebar"
