--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -25,57 +25,4 @@
 = render :partial => "comments/comments_list", :locals => {:commentable => @post }
   
 - content_for :sidebar do
-  #invite
-    %h3
-      invita a
-      %br>/
-      tus amigos
-    %ul
-      %li.facebook
-        %a{:href => "#"}
-      %li.twitter
-        %a{:href => "#"}
-      %li.email
-        %a{:href => "#"}
-  #chunteros
-    %h3 los chunteros
-    %ul.ranking
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4= ""
-        %p 3 pronósticos
-        %p 0 aciertos
-        %p.title novato
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4= ""
-        %p 2 pronósticos
-        %p 0 aciertos
-        %p.title novato
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4= ""
-        %p 2 pronósticos
-        %p 0 aciertos
-        %p.title novato
-  #punteros
-    %h3 los punteros
-    %ul.ranking
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4
-        %p 3 puntos
-        %p.title novato
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 
-        %p 2 puntos
-        %p.title novato
-      %li
-        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4
-        %p 1 puntos
-        %p.title novato
-  #facebook_likebox
-    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
-
+  = render :partial => "home/sidebar"
