Changed order on matches at home

--- a/app/views/predictions/_form.haml
+++ b/app/views/predictions/_form.haml
@@ -52,4 +52,4 @@
 
   .group.navform.wat-cf
     =f.submit "¡Pronosticar!", :class => :button
-    =f.submit "Me arrepentí", :onclick => "parent.$.fancybox.close();return false", :class => :button
+    =f.submit "Cerrar, lo dejo ahí", :onclick => "parent.$.fancybox.close();return false", :class => :button
