Improved logo a bit

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -141,14 +141,14 @@ input.submit:hover {
 }
 
 
-h1 {
-	background: url(../images/logo.png) no-repeat;
-	width:203px;
-	height:28px;
-	position:absolute;
-	bottom:20px;
-	left:21px;
-	z-index:10;
+h1 {	
+	background:url("../images/logo.png") no-repeat scroll 0 0 transparent;
+  bottom:13px;
+  height:42px;
+  left:21px;
+  position:absolute;
+  width:203px;
+  z-index:10;
 }
 
 h1 a{
