--- a/app/views/predictions/index.html.haml
+++ b/app/views/predictions/index.html.haml
@@ -1,4 +1,4 @@
-- @title = "Patatoon ::  exprésate a tu manera"
+- @title = "Patatoon ::  Dejando tu pronóstico"
 - @body_class = "home"
 = display_flashes
 
