--- a/app/views/predictions/show.html.haml
+++ b/app/views/predictions/show.html.haml
@@ -1,5 +1,5 @@
 - @body_class = "register home prediction show"
-
+- @title = "Pronóstico #{@prediction.name}"
 %h2 
   %span Viendo predicción del partido
   %br
