--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -24,13 +24,15 @@
                 %tr.header
                   %td.first Partido
                   %td
-                    .flag.small{:class=>match.local.flag_name}= match.local.short_name
+                    %a{:href=>match_path(match)}
+                      .flag.small{:class=>match.local.flag_name}= match.local.short_name
                   %td
-                    .flag.small{:class=>match.visitor.flag_name}= match.visitor.short_name
+                    %a{:href=>match_path(match)}
+                      .flag.small{:class=>match.visitor.flag_name}= match.visitor.short_name
                 %tr
                   %td.first goles
-                  %td{:class=>("win" if match.local_winner?)}= match.first_team_goals
-                  %td{:class=>("win" if match.visitor_winner?)}= match.second_team_goals
+                  %td{:class=>("win" if match.local_winner?)}= (match.first_team_goals || "--")
+                  %td{:class=>("win" if match.visitor_winner?)}= (match.second_team_goals || "--")
                 - if account_signed_in?
                   %tr{:colspan => 3}
                     %td{:colspan => 3}
