--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,18 @@
       = stylesheet_link_tag "ie"
     = yield :include 
     = yield :head
+    :erb
+      <script type="text/javascript">
+          var addthis_config = {
+                    username: 'patatoon',
+                    ui_language: "es"
+                    
+              }
+      </script>
+    
+    %meta{:content => "Patatoon", :property => "og:title"}/
+    = yield :meta_fb
+    
     %body{:class=>"#{controller.controller_name} #{@body_class}"}
       /[if IE]
         :erb
@@ -83,3 +95,4 @@
         :erb
           </div>
       = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','jcarousellite_1.0.1.min','countdown/jquery.countdown.min','date','jquery.countdown-es','application'
+      = javascript_include_tag "http://s7.addthis.com/js/250/addthis_widget.js"
