--- a/app/views/matches/show.haml
+++ b/app/views/matches/show.haml
@@ -1,5 +1,8 @@
 - @body_class = "register home"
 - @title = "Patatoon :: Partido #{@match.name}"
+- content_for :meta_fb do
+  %meta{:content => "Partido: #{@match.title}", :property => "og:site_name"}/
+
 
 %h2 
   %span Viendo 
@@ -57,6 +60,14 @@
               %td{:class=>("win" if prediction.visitor_winner?)}= prediction.second_team_result
 
 .clear            
+
+%ul.extra_links
+  %li
+    %a.addthis_button{"addthis:description" => @match.title, "addthis:title" => @match.name, :href => "http://www.addthis.com/bookmark.php"}
+      %img{:alt => "Compartir", :border => "0", :height => "16", :src => "http://s7.addthis.com/static/btn/v2/sm-share-es.gif", :width => "83"}/
+  %li.last
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/like.php?href=#{match_url(@match)}&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=35", :style => "border:none; overflow:hidden; width:450px; height:35px;"}
+
 
 = render :partial => "comments/comments_list", :locals => {:commentable => @match }
   
