--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -977,6 +977,7 @@ margin-top: 45px;
 #content ul.extra_links {
 	overflow: hidden;	
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #content ul.extra_links li {
