Enableing profile view

--- a/app/views/profiles/_future_match.html.haml
+++ b/app/views/profiles/_future_match.html.haml
@@ -1,10 +1,22 @@
 - if future_match
   .match
     .match_content
-      .flag= image_tag(random_flag)
-      .flag= image_tag(random_flag)
-      %div{:style=>"clear:both;"} 
-      .match_time= distance_of_time_in_words_to_now(future_match.match.played_at)
-    .match_links
-      .send= link_to "manda tu predicción", match_prediction_path(future_match.match), :class=>"small iframe"
-      .view= link_to "mira la de tus amigos", match_path(future_match.match), :class=>"small"
+      .flags
+        .flag
+          .image
+            %span.flag.small{:class => future_match.match.local.flag_name} --
+            %br
+            = future_match.match.local.short_name
+          .prediction_result
+            = (future_match.first_team_result || "--" )
+          .clear
+        .flag
+          .image
+            %span.flag.small{:class => future_match.match.visitor.flag_name} --
+            %br
+            = future_match.match.visitor.short_name
+          .prediction_result
+            = (future_match.second_team_result || "--")
+          .clear            
+        .clear
+      .clear
