--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -96,3 +96,17 @@
           </div>
       = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','jcarousellite_1.0.1.min','countdown/jquery.countdown.min','date','jquery.countdown-es','application'
       = javascript_include_tag "http://s7.addthis.com/js/250/addthis_widget.js"
+      :erb
+        <script type="text/javascript">
+
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-16950676-1']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
