--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,42 +1,44 @@
-%h1 Viendo perfil de #{@account.full_name}
-%h2= link_to("Actualizar datos", edit_account_registration_path ) if @account == current_account
+%h2
+  Perfil de 
+  %span #{@account.full_name}
+  
+    
 #profile_sidebar
-  .content
-    = image_tag @account.picture.url(:medium) if @account.picture_file_name
-    = link_to "#", "cambiar mi avatar" if @account.avatar
-    
-  .special.content
-    %h3 Título
-    %h2 Lord del Futbol
-    
-    %h3 Edad
-    %h2= account_age
-    
-    .content
-      %h2 Equipos favoritos
-      = render :partial => "teams/favorite_team", :collection => @account.teams
-      
-    .content
-      %h2 Amigos
-      = render :partial => "friends/profile_friend", :collection => @account.friends
 
-    
+  #profile_info
+    #profile_avatar
+      = image_tag ("#", :id=>"avatar_image")
+    #profile_data
 
+      %h3 Título
+      %h2= @account.title
+    
+      %h3 Puntos
+      %h2= @account.score
+    
+      %h3 Nombre
+      %h2= @account.full_name
+
+      = link_to("Actualizar datos", edit_account_registration_path ) if @account == current_account
+
+    .clear
+  
+  #profile_friends
+    %h2 Mis patas
+  #profile_teams      
+    %h2 Mis equipos favoritos
+    
 #main_content
   
-  #needed_points
-    Puntos restantes para ser Ultra-Fan
-    %strong 120
-  
   #profile_predictions.content
-    %h2 Pronósticos hechos
+    %h2 Pronósticos
     .incoming
       %h3 Por venir
       = render :partial => "profiles/future_match", :collection =>@account.future_predictions
       = link_to "ver todas", player_predictions_path(@account.id, :anchor=>"future")
     .done
       %h3 Pasadas
-      = render :partial => "profiles/past_match", :colecction => @account.past_predictions
+      = render :partial => "profiles/past_match", :collection => @account.past_predictions
       = link_to "ver todas", player_predictions_path(@account.id, :anchor =>"past")
     %div{:style=>"clear:both;"} 
   #game_status.content
