--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -30,6 +30,8 @@ h2,h3,h4,h5,h6 {
 	overflow:visible;
 }
 
+
+
 h2 {
 	font-size:2.7em;
 	height:32px;
@@ -1042,3 +1044,310 @@ margin-top: 45px;
 	float: left;
 	margin-right: 20px ;
 }
+
+.profiles #content #profile_data h2  {
+	margin-bottom: 10px;
+}
+
+img#avatar_image {
+	width: 200px;
+	height: 300px;
+}
+
+#profile_friends h2,
+#profile_teams h2 {
+	font-size: 25px;
+	color: #90a65c;
+}
+
+#profile_data a {
+	color: #90a65c;
+}
+
+div#profile_avatar {
+	overflow: hidden;
+	float: left;
+	margin-right: 20px;
+}
+
+div#profile_data {
+	float: left;
+}
+div#profile_data h2 {
+	color: #676767;
+	font: 14px/10px Arial, Helvetica, Geneva, sans-serif;
+}
+
+div#profile_info {
+	margin-bottom: 20px;
+
+}
+
+#content h2 {
+	margin-bottom: 20px;
+}
+
+div#profile_sidebar {
+	overflow: auto;
+	float: left;
+	margin-right: 20px;
+}
+
+div#main_content {
+	float: left;
+	width: 500px;
+}
+
+div#profile_predictions.content,
+div#game_status.content {
+	background-color: #ebf3d7;
+	padding: 20px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
+
+div#game_status.content {
+	margin-top: 10px;
+}
+#game_status ul {
+	overflow: hidden;
+}
+#game_status ul li {
+	float: left;
+	width: 230px;
+	margin-bottom: 10px;
+}
+
+#game_status h2 {
+	font-size: 18px;
+	color: #a8b781;
+	margin-bottom: 10px;
+}
+
+#game_status ul li strong {
+	font-weight: bold;
+	color: #753a3b;
+}
+
+#game_status ul li span {
+	display: block;	
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+#profile_predictions h2 {
+	color: #a8b781;
+	font-size: 30px;
+	font-weight: normal;
+	font-style: normal;
+}
+
+#profile_predictions div.incoming {
+	float: left;
+	width: 180px;
+	margin-right: 10px;
+}
+
+#profile_predictions div.done {
+	float: left;
+	width: 270px;
+}
+
+#profile_predictions div.incoming h3,
+#profile_predictions div.done h3 {
+	font-size: 17px;
+	color: #a8b781;
+	margin-bottom: 10px;
+}
+
+
+#profile_predictions span.flag.small {
+	width: 32px;
+	height: 32px;
+	display: block;
+	text-indent: -9999px;
+
+}
+
+#profile_predictions div.match div.real_result div.result strong span.flag.small {
+	float: left;
+	width: 20px;
+}
+
+#profile_predictions div.incoming div.match div.match_content div.flags div.flag {
+	float: left;
+}
+
+#profile_predictions div.incoming div.match div.match_content div.flags div.flag div.prediction_result {
+	font-weight: bold;
+	margin-top: 10px;
+	height: 10px;
+}
+
+#profile_predictions div.done div.match div.real_result div.result strong {
+	overflow: auto;
+	float: left;
+}
+#profile_predictions .flags span.flag.small {
+	float: left;	
+}
+
+#profile_predictions div.done div.match div.real_result span {
+	color: #697b3f;
+	float: left;
+	width:80px;
+	margin-right: 10px;
+	height: 20px;
+	margin-top: 5px;
+}
+
+#profile_predictions div.done div.match div.real_result div.result strong span.flag.small {
+	margin: 0px;	
+}
+
+#profile_predictions div.done div.match div.real_result div.result strong span.goals {
+	float: left;
+	width: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 5px;
+	font-weight: bold;
+	color: #000;
+	font-size: 13px;
+}
+
+#profile_predictions div.done div.match div.real_result div.result strong {
+	overflow: auto;	
+	display: block;
+}
+
+#profile_predictions div.done div.match div.real_result div.result {
+	float: left;
+	width: 80px;
+	overflow: auto;
+}
+
+#profile_predictions div.match div.match_content div.flags div.flag div.image {
+	float: left;
+}
+
+#profile_predictions div.match div.match_content div.flags div.flag div.prediction_result {
+	float: left;
+}
+
+#profile_predictions div.match div.match_content div.flags div.flag div.prediction_result {
+	width: 20px;
+	height: 30px;
+	margin-left: 10px;
+}
+
+#profile_predictions div.done div.match {
+	overflow: hidden;	
+	margin-bottom: 10px;
+}
+
+#profile_predictions div.match div.match_content div.flags div.flag div.image {
+	font: 11px Arial, Helvetica, Geneva, sans-serif;
+}
+
+#profile_predictions div.done div.match div.match_content div.flags div.flag div.prediction_result {
+	font-weight: bold;
+	margin-top: 10px;
+	height: 20px;
+}
+
+#profile_predictions div.match div.match_content {
+	clear: both;
+	overflow: auto;
+	background-color: white;
+	padding: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	
+}
+
+#profile_predictions div.incoming div.match div.match_content {
+	width: 150px !important;	
+}
+
+#profile_predictions div.incoming div.match {
+}
+
+#profile_predictions div.done div.match div.match_content div.flags div.flag div.image {
+	float: left;
+}
+
+#profile_predictions div.done div.match div.real_result {
+	clear: both;	
+	overflow: auto;
+	padding: 5px;
+	padding-left: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius-topleft: 0px;
+	-moz-border-radius-topright: 0px;
+	-webkit-border-top-left-radius: 0px;
+	-webkit-border-top-right-radius: 0px;
+	background-color: #c7d79f;
+	width: 170px;
+}
+
+#profile_predictions div.done div.match div.match_content div.match_message {
+	float: left;
+	
+}
+
+#profile_predictions div.done div.match div.match_content div.match_message span.right {
+	color: #00c700;
+}
+#profile_predictions div.done div.match div.match_content div.match_message span.wrong {
+	color: #f00;
+}
+#profile_predictions div.done div.match div.match_content div.match_message span.almost {
+	color: #490a00;
+}
+#profile_predictions div.done div.match div.match_content div.match_message span.close {
+	color: #f68800;
+}
+
+
+#profile_predictions div.done div.match div.match_content div.flags {
+	overflow: hidden;	
+	float: left;
+}
+
+#profile_predictions div.done div.match div.match_content div.flags div.flag {
+	float: left;
+}
+
+div#profile_data h3 {
+	font-size: 14px;
+	margin-bottom: 5px !important;
+	line-height: 10px;
+	color: #90a65c;
+}
+
+.profiles #content h2 span {
+	color: #90a65c;
+}
+
+
+#profile_predictions div.done div.match div.match_content div.match_message {
+	font-family: 'HelveticaRounded', Arial;
+	overflow:visible;
+	font-size: 1.3em;
+	margin-top: 10px;
+	margin-left: 20px;
+}
+#profile_predictions div.done a,
+#profile_predictions div.incoming a {
+	color: #6e7757;
+	margin-left: 30px;
+	margin-top: 20px;
+	display: block;
+}
+
+
+
+
+
