--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -23,11 +23,11 @@
 
     .clear
   
-  #profile_friends
-    %h2 Mis patas
-  #profile_teams      
-    %h2 Mis equipos favoritos
-    
+  / #profile_friends
+  /   %h2 Mis patas
+  / #profile_teams      
+  /   %h2 Mis equipos favoritos
+  /   
 #main_content
   
   #profile_predictions.content
