--- a/app/views/home/_last_prediction.html.haml
+++ b/app/views/home/_last_prediction.html.haml
@@ -1,6 +1,7 @@
 %li{:class=>(cycle("odd","even"))}
   .meta
-    %img.avatar{:alt => "", :height => "51", :src => "/images/missing.png", :width => "51"}/
+    %a{:href=>profile_path(last_prediction.account.to_param)}
+      %img.avatar{:alt => "", :height => "51", :src => "/images/missing.png", :width => "51"}/
     %p= last_prediction.account.name
     %p.title= last_prediction.account.title
   %table{:cellpadding => "0", :cellspacing => "0"}
