--- a/app/views/home/_top_season.html.haml
+++ b/app/views/home/_top_season.html.haml
@@ -1,5 +1,6 @@
 %li
-  %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+  %a{:href=>profile_path(top_season.to_param)}
+    %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
   %h4= top_season.name
   %p= "#{top_season.predictions.size} pronósticos"
   %p= "#{top_season.right_predictions_count} aciertos"
