--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -23,11 +23,28 @@
 
     .clear
   
-  / #profile_friends
-  /   %h2 Mis patas
-  / #profile_teams      
-  /   %h2 Mis equipos favoritos
-  /   
+  
+    #portlet_moreLinks.portlet.portletC
+      .portlet_content
+        %ul
+          - if its_me?
+            %li= link_to I18n.t('tog_social.profiles.site.edit_profile'), edit_member_profile_path(@profile)
+          - else 
+            %li= link_to I18n.t('tog_social.profiles.site.send_message'), member_new_message_to_path(@profile.user)
+            %li= report_abuse_link @profile
+            %li= following_options(@profile)
+
+
+  #profile_friends
+    %h2 Mis patas
+    = render :partial => "shared/profiles_portlet", :locals => { :items =>  @profile.friends, :style => :portletG, :title => I18n.t('tog_social.profiles.model.friends'), :no_items => I18n.t('tog_social.profiles.model.friends_not_found', :profile_full_name => @profile.full_name)}
+  #profile_followers
+    %h2 Mis seguidores
+    = render :partial => "shared/profiles_portlet", :locals => { :items =>  @profile.followers, :style => :portletG, :title => I18n.t('tog_social.profiles.model.followers'), :no_items => I18n.t('tog_social.profiles.model.followers_not_found', :profile_full_name => @profile.full_name) }
+  #profile_following
+    %h2 A quiénes sigo
+    = render :partial => "shared/profiles_portlet", :locals => { :items =>  @profile.followings,:style => :portletG,:title => I18n.t('tog_social.profiles.model.followings'),:no_items => I18n.t('tog_social.profiles.model.followings_not_found', :profile_full_name => @profile.full_name) }
+
 #main_content
   
   #profile_predictions.content
